force-app/main/default/objects/ComponentView__mdt/ComponentView__mdt.object-meta.xml
<CustomObject>
    <description>Parametrizações de, para se ter uma flexibilidade com as data table.</description>
    <label>ComponentView</label>
    <pluralLabel>ComponentView</pluralLabel>
</CustomObject>