force-app/main/default/objects/ComponentView__mdt/fields/ApiFieldsTypesAndCaseFields__c.field-meta.xml
<CustomField>
    <fullName>ApiFieldsTypesAndCaseFields__c</fullName>
    <description>Campos da Api, tipo do campo e o campo no objeto caso. Exemplo:
numeroApolice:text:Apolice__c
Aonde numeroApolice é o campo na API
text é o tipo de dado
Apolice__c é o nome do API do objeto Case</description>
    <label>ApiFieldsTypesAndCaseFields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>