force-app/main/default/objects/ComponentView__mdt/fields/ApiFieldsTypesAndOppFields__c.field-meta.xml
<CustomField>
    <fullName>ApiFieldsTypesAndOppFields__c</fullName>
    <label>ApiFieldsTypesAndOppFields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>