force-app/main/default/objects/ComponentView__mdt/fields/ColumnHeader__c.field-meta.xml
<CustomField>
    <fullName>ColumnHeader__c</fullName>
    <label>ColumnHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>