force-app/main/default/objects/ComponentView__mdt/fields/FieldAndType__c.field-meta.xml
<CustomField>
    <fullName>FieldAndType__c</fullName>
    <label>FieldAndType</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>